:sparkles: Moved to gradle, overhauled plugin